Force reload data on statistics.
